# rust-weather

./: Cargo.toml  README.md
src/: config.rs  main.rs  weather.rs
