[package]
name = "rust-weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Parse argv
clap = { version = "2", features = ["suggestions","color"] }

# Parse json format
serde = "1"
serde_json = "1"
serde_derive = "1"

# HTTP request
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

